# nrf-pacs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.template.toml  Cargo.toml  README.md
pacs/nrf51-pac/: Cargo.toml  device.x
pacs/nrf51-pac/src/: aar.rs  adc.rs  ccm.rs  clock.rs  ecb.rs  ficr.rs  gpio.rs  gpiote.rs  lib.rs  lpcomp.rs  nvmc.rs  power.rs  ppi.rs  qdec.rs  radio.rs  rng.rs  rtc0.rs  spi0.rs  spis1.rs  temp.rs  timer0.rs  twi0.rs  uart0.rs  uicr.rs  wdt.rs
pacs/nrf51-pac/src/aar/: addrptr.rs  enable.rs  events_end.rs  events_notresolved.rs  events_resolved.rs  intenclr.rs  intenset.rs  irkptr.rs  nirk.rs  scratchptr.rs  status.rs  tasks_start.rs  tasks_stop.rs
pacs/nrf51-pac/src/adc/: busy.rs  config.rs  enable.rs  events_end.rs  intenclr.rs  intenset.rs  result.rs  tasks_start.rs  tasks_stop.rs
pacs/nrf51-pac/src/ccm/: cnfptr.rs  enable.rs  events_endcrypt.rs  events_endksgen.rs  events_error.rs  inptr.rs  intenclr.rs  intenset.rs  micstatus.rs  mode.rs  outptr.rs  power.rs  scratchptr.rs  shorts.rs  tasks_crypt.rs  tasks_stop.rs
pacs/nrf51-pac/src/clock/: ctiv.rs  events_ctto.rs  events_done.rs  events_hfclkstarted.rs  events_lfclkstarted.rs  hfclkrun.rs  hfclkstat.rs  intenclr.rs  intenset.rs  lfclkrun.rs  lfclksrc.rs  lfclksrccopy.rs  lfclkstat.rs  tasks_cal.rs  tasks_ctstart.rs  tasks_ctstop.rs  tasks_hfclkstart.rs  tasks_hfclkstop.rs  tasks_lfclkstart.rs  tasks_lfclkstop.rs  xtalfreq.rs
pacs/nrf51-pac/src/ecb/: ecbdataptr.rs  events_endecb.rs  events_errorecb.rs  intenclr.rs  intenset.rs  tasks_startecb.rs  tasks_stopecb.rs
pacs/nrf51-pac/src/ficr/: ble_1mbit.rs  clenr0.rs  codepagesize.rs  codesize.rs  configid.rs  deviceaddr.rs  deviceaddrtype.rs  deviceid.rs  er.rs  ir.rs  nrf_1mbit.rs  numramblock.rs  overrideen.rs  ppfc.rs  sizeramblock.rs  sizeramblocks.rs
pacs/nrf51-pac/src/gpio/: dir.rs  dirclr.rs  dirset.rs  in_.rs  out.rs  outclr.rs  outset.rs  pin_cnf.rs
pacs/nrf51-pac/src/gpiote/: config.rs  events_in.rs  events_port.rs  intenclr.rs  intenset.rs  tasks_out.rs
pacs/nrf51-pac/src/lpcomp/: anadetect.rs  enable.rs  events_cross.rs  events_down.rs  events_ready.rs  events_up.rs  extrefsel.rs  intenclr.rs  intenset.rs  psel.rs  (+6 more)
pacs/nrf52805-pac/: Cargo.toml  device.x
pacs/nrf52805-pac/src/: approtect.rs  bprot.rs  clock.rs  lib.rs  nvmc.rs  p0.rs  power.rs  ppi.rs  qdec.rs  radio.rs  spi0.rs  temp.rs  twi0.rs  twim0.rs  uicr.rs
pacs/nrf52811-pac/: Cargo.toml  device.x
pacs/nrf52811-pac/src/: ficr.rs  gpiote.rs  lib.rs  nvmc.rs  power.rs  pwm0.rs  radio.rs  spim0.rs  spis0.rs  twis0.rs  uart0.rs  uarte0.rs  uicr.rs
pacs/nrf52820-pac/: Cargo.toml  device.x
pacs/nrf52820-pac/src/: acl.rs  approtect.rs  ccm.rs  clock.rs  comp.rs  ecb.rs  ficr.rs  lib.rs  nvmc.rs  p0.rs  power.rs  ppi.rs  qdec.rs  radio.rs  rng.rs  rtc0.rs  spim0.rs  timer0.rs  twim0.rs  twis0.rs  uarte0.rs  uicr.rs  usbd.rs
pacs/nrf52832-pac/: Cargo.toml
pacs/nrf52832-pac/src/: bprot.rs  ccm.rs  clock.rs  comp.rs  egu0.rs  ficr.rs  gpiote.rs  i2s.rs  lib.rs  lpcomp.rs  mwu.rs  nfct.rs  nvmc.rs  p0.rs  pdm.rs  power.rs  ppi.rs  pwm0.rs  qdec.rs  radio.rs  rng.rs  rtc0.rs  saadc.rs  spi0.rs  spim0.rs  spis0.rs  timer0.rs  timer3.rs  twi0.rs  twim0.rs  twis0.rs  uart0.rs  uarte0.rs  uicr.rs  wdt.rs
pacs/nrf5340-app-pac/: Cargo.toml  device.x
pacs/nrf5340-app-pac/src/: cache_s.rs  cachedata_s.rs  cacheinfo_s.rs  clock_ns.rs  comp_ns.rs  cryptocell_s.rs  cti_s.rs  ctrlap_ns.rs  dcnf_ns.rs  dppic_ns.rs  ficr_s.rs  fpu_ns.rs  gpiote0_s.rs  i2s0_ns.rs  lib.rs  lpcomp_ns.rs  mutex_ns.rs  nfct_ns.rs  nvmc_ns.rs  oscillators_ns.rs  pdm0_ns.rs  power_ns.rs  pwm0_ns.rs  qdec0_ns.rs  qspi_ns.rs  regulators_ns.rs  reset_ns.rs  rtc0_ns.rs  saadc_ns.rs  spim0_ns.rs  spis0_ns.rs  spu_s.rs  tad_s.rs  timer0_ns.rs  twim0_ns.rs  twis0_ns.rs  uarte0_ns.rs  uicr_s.rs  usbd_ns.rs  usbregulator_ns.rs  (+2 more)
pacs/nrf5340-net-pac/: Cargo.toml  device.x
pacs/nrf5340-net-pac/src/: aar_ns.rs  acl_ns.rs  appmutex_ns.rs  ccm_ns.rs  clock_ns.rs  cti_ns.rs  ctrlap_ns.rs  dcnf_ns.rs  ecb_ns.rs  egu0_ns.rs  ficr_ns.rs  ipc_ns.rs  lib.rs  nvmc_ns.rs  power_ns.rs  radio_ns.rs  reset_ns.rs  rng_ns.rs  rtc0_ns.rs  spim0_ns.rs  temp_ns.rs  timer0_ns.rs  uicr_ns.rs  vmc_ns.rs  vreqctrl_ns.rs  wdt_ns.rs
pacs/nrf9120-pac/: Cargo.toml  device.x
pacs/nrf9120-pac/src/: approtect_ns.rs  cc_host_rgf_s.rs  clock_ns.rs  cryptocell_s.rs  ctrl_ap_peri_s.rs  dppic_ns.rs  egu0_ns.rs  ficr_s.rs  fpu_ns.rs  generic.rs  gpiote0_s.rs  i2s_ns.rs  ipc_ns.rs  kmu_ns.rs  lib.rs  nvmc_ns.rs  p0_ns.rs  pdm_ns.rs  power_ns.rs  pwm0_ns.rs  regulators_ns.rs  rtc0_ns.rs  saadc_ns.rs  spim0_ns.rs  spis0_ns.rs  spu_s.rs  tad_s.rs  timer0_ns.rs  twim0_ns.rs  twis0_ns.rs  uarte0_ns.rs  uicr_s.rs  vmc_ns.rs  wdt_ns.rs
pacs/nrf9160-pac/: Cargo.toml
pacs/nrf9160-pac/src/: cc_host_rgf_s.rs  clock_ns.rs  ctrl_ap_peri_s.rs  dppic_ns.rs  ficr_s.rs  gpiote0_s.rs  i2s_ns.rs  ipc_ns.rs  kmu_ns.rs  lib.rs  nvmc_ns.rs  p0_ns.rs  pdm_ns.rs  power_ns.rs  pwm0_ns.rs  regulators_ns.rs  rtc0_ns.rs  saadc_ns.rs  spim0_ns.rs  spu_s.rs  tad_s.rs  timer0_ns.rs  uarte0_ns.rs  uicr_s.rs  vmc_ns.rs  wdt_ns.rs
(+5012 files in other folders)
