[package]
name = "nrf52832-pac"
description = "Peripheral Access Crate for Nordic's nrf52832 microcontroller"
documentation = "https://docs.rs/nrf52832-pac"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
cortex-m.workspace = true
vcell.workspace = true

[dependencies.cortex-m-rt]
optional = true
workspace = true

[features]
rt = ["cortex-m-rt/device"]
