[package]
name = "nrf5340-app-pac"
description = "Peripheral Access Crate for Nordic's nrf5340-app microcontroller"
documentation = "https://docs.rs/nrf5340-app-pac"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cortex-m.workspace = true
vcell.workspace = true

[dependencies.cortex-m-rt]
optional = true
workspace = true

[features]
rt = ["cortex-m-rt/device"]
