[package]
name = "nrf5340-net-pac"
description = "Peripheral Access Crate for Nordic's nrf5340-net microcontroller"
documentation = "https://docs.rs/nrf5340-net-pac"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cortex-m.workspace = true
vcell.workspace = true

[dependencies.cortex-m-rt]
optional = true
workspace = true

[features]
rt = ["cortex-m-rt/device"]
